# scrub

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  release.yml
benches/: per_rule.rs  throughput.rs
config/: custom.toml
confusion/: main.rs
docs/superpowers/specs/: 2026-06-24-benchmark-design.md  2026-06-24-ml-postfilter-design.md
ml/: evaluate_creddata.py  features.py  requirements.txt  train.py  train_xgb.py  trainer.py
ml/output/: creddata_comparison.json  creddata_eval.json  model_xgb.rs  training_results.json  xgb_results.json
ml/tests/: test_features.py  test_trainer.py
src/: lib.rs  main.rs  ml.rs  ml_model.rs  rules.rs
tests/: integration.rs
