[package]
name = "scrub-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Redact secrets and PII from text using gitleaks detection rules."

[[bin]]
name = "scrub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
