[package]
name = "caviarder"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Redact secrets and PII from text using gitleaks detection rules."
repository = "https://github.com/WillIsback/caviarder"
homepage = "https://github.com/WillIsback/caviarder"
documentation = "https://github.com/WillIsback/caviarder"

[[bin]]
name = "cav"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
